# epidoc_conversion

./: .gitignore  LICENSE  README.md  commentaries.exs  main.py  pyproject.toml  pytest.ini
epidoc_conversion/: character_entities.py  converter.py
epidoc_conversion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: cli.py
src/epidoc_conversion.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/p6_converter/: converter.py
src/p6_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: viaf000.viaf000.test_file.xml
tests/p6_converter/: test_converter.py
