[project]
name = "p6_converter"
dynamic = ["version"]

dependencies = [
    "betacode",
   	"hooktest>=1.3.1",
 	"lxml",
 	"pygtrie>=2.5.0",
 	"setuptools>=80.4.0",
]

requires-python = ">= 3.11"

[project.scripts]
convert = "cli:convert"

[dependency-groups]
dev = ["pytest>=8.4.0"]

[build-system]
requires = ["setuptools >= 80.4.0"]
build-backend = "setuptools.build_meta"
